--- a/mapApp/mapApp/en.lproj/MainStoryboard.storyboard
+++ b/mapApp/mapApp/en.lproj/MainStoryboard.storyboard
@@ -13,9 +13,9 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lJW-ba-0OA"/>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Speed" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1e-36-Oyt">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Speed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1e-36-Oyt">
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="52" id="LpU-8Y-aUR"/>
+                                    <constraint firstAttribute="width" constant="166" id="pfh-5W-URe"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
@@ -109,7 +109,6 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="bgj-BM-hvL" firstAttribute="centerX" secondItem="r1e-36-Oyt" secondAttribute="centerX" type="default" id="2KW-9C-RJ3"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="bottom" secondItem="16" secondAttribute="bottom" type="default" id="B65-hb-hZY"/>
                             <constraint firstItem="wtL-dz-U2w" firstAttribute="leading" secondItem="bua-3F-uvT" secondAttribute="trailing" constant="8" symbolic="YES" type="default" id="Bs7-rk-F1u"/>
                             <constraint firstAttribute="bottom" secondItem="bua-3F-uvT" secondAttribute="bottom" constant="20" symbolic="YES" type="default" id="EbH-GG-HE5"/>
@@ -121,14 +120,15 @@
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="VnB-xe-bPC"/>
                             <constraint firstAttribute="trailing" secondItem="wtL-dz-U2w" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="YaB-it-M4t"/>
                             <constraint firstItem="lJW-ba-0OA" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="bQl-ik-BFb"/>
+                            <constraint firstItem="r1e-36-Oyt" firstAttribute="centerX" secondItem="lJW-ba-0OA" secondAttribute="centerX" type="default" id="btA-iZ-rTd"/>
                             <constraint firstItem="sYa-Hd-fn3" firstAttribute="baseline" secondItem="0TB-L7-u0d" secondAttribute="baseline" type="default" id="egc-Rl-qmd"/>
                             <constraint firstItem="r1e-36-Oyt" firstAttribute="top" secondItem="16" secondAttribute="top" constant="20" symbolic="YES" type="default" id="fxa-ad-l3z"/>
                             <constraint firstAttribute="trailing" secondItem="sYa-Hd-fn3" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="fxm-it-BiI"/>
                             <constraint firstItem="bke-o1-oKX" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="fyW-Lq-fjU"/>
                             <constraint firstAttribute="bottom" secondItem="bgj-BM-hvL" secondAttribute="bottom" constant="144" id="gRJ-Xc-oKO"/>
+                            <constraint firstItem="0TB-L7-u0d" firstAttribute="top" secondItem="r1e-36-Oyt" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="lcm-7y-av5"/>
                             <constraint firstItem="0TB-L7-u0d" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="slB-ze-Kay"/>
-                            <constraint firstItem="sYa-Hd-fn3" firstAttribute="top" secondItem="r1e-36-Oyt" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="vG0-yP-h4b"/>
-                            <constraint firstItem="bgj-BM-hvL" firstAttribute="centerX" secondItem="lJW-ba-0OA" secondAttribute="centerX" type="default" id="wLB-kL-ZRd"/>
+                            <constraint firstItem="r1e-36-Oyt" firstAttribute="centerX" secondItem="bgj-BM-hvL" secondAttribute="centerX" type="default" id="vX8-dr-UiH"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Map" image="first" id="7"/>
@@ -208,6 +208,26 @@
         <image name="first" width="16" height="16"/>
         <image name="second" width="16" height="16"/>
     </resources>
+    <classes>
+        <class className="MapViewController" superclassName="UIViewController">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
+            <relationships>
+                <relationship kind="action" name="toggleLocationOnMap:"/>
+                <relationship kind="action" name="zoomChange:"/>
+                <relationship kind="action" name="zoomToMe:"/>
+                <relationship kind="outlet" name="latLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="longLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
+                <relationship kind="outlet" name="speedLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="testLabel" candidateClass="UILabel"/>
+                <relationship kind="outlet" name="zoomInButton" candidateClass="UIButton"/>
+                <relationship kind="outlet" name="zoomOutButton" candidateClass="UIButton"/>
+            </relationships>
+        </class>
+        <class className="NSLayoutConstraint" superclassName="NSObject">
+            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
+        </class>
+    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
