--- a/mapAppOffline/mapApp/en.lproj/MainStoryboard.storyboard
+++ b/mapAppOffline/mapApp/en.lproj/MainStoryboard.storyboard
@@ -13,7 +13,6 @@
                         <rect key="frame" x="0.0" y="20" width="320" height="499"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" showsUserLocation="YES" translatesAutoresizingMaskIntoConstraints="NO" id="lJW-ba-0OA"/>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Speed" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r1e-36-Oyt">
                                 <constraints>
                                     <constraint firstAttribute="width" constant="166" id="pfh-5W-URe"/>
@@ -107,19 +106,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="bke-o1-oKX" firstAttribute="top" secondItem="O2n-h0-JCC" secondAttribute="top" type="default" id="97r-4A-w1f"/>
                             <constraint firstAttribute="bottom" secondItem="bgj-BM-hvL" secondAttribute="bottom" constant="144" id="9SI-d2-rKI"/>
-                            <constraint firstItem="lJW-ba-0OA" firstAttribute="bottom" secondItem="16" secondAttribute="bottom" type="default" id="B65-hb-hZY"/>
-                            <constraint firstItem="lJW-ba-0OA" firstAttribute="trailing" secondItem="16" secondAttribute="trailing" type="default" id="Hb9-tm-iYq"/>
                             <constraint firstItem="O2n-h0-JCC" firstAttribute="leading" secondItem="r1e-36-Oyt" secondAttribute="leading" type="default" id="I9e-T2-Pjz"/>
-                            <constraint firstItem="bgj-BM-hvL" firstAttribute="centerX" secondItem="lJW-ba-0OA" secondAttribute="centerX" type="default" id="ITp-W7-I9T"/>
                             <constraint firstAttribute="bottom" secondItem="bke-o1-oKX" secondAttribute="bottom" constant="95" id="P6H-eF-IPP"/>
                             <constraint firstItem="bke-o1-oKX" firstAttribute="baseline" secondItem="O2n-h0-JCC" secondAttribute="baseline" type="default" id="QVq-3I-gRr"/>
                             <constraint firstItem="bke-o1-oKX" firstAttribute="leading" secondItem="16" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Ts3-A0-KXg"/>
-                            <constraint firstItem="lJW-ba-0OA" firstAttribute="leading" secondItem="16" secondAttribute="leading" type="default" id="VnB-xe-bPC"/>
+                            <constraint firstItem="bgj-BM-hvL" firstAttribute="centerX" secondItem="16" secondAttribute="centerX" type="default" id="Vp7-Nm-fzx"/>
                             <constraint firstItem="wtL-dz-U2w" firstAttribute="baseline" secondItem="bua-3F-uvT" secondAttribute="baseline" type="default" id="X1J-7W-KBn"/>
                             <constraint firstItem="wtL-dz-U2w" firstAttribute="trailing" secondItem="sYa-Hd-fn3" secondAttribute="trailing" type="default" id="YK5-mq-okq"/>
-                            <constraint firstItem="lJW-ba-0OA" firstAttribute="top" secondItem="16" secondAttribute="top" type="default" id="bQl-ik-BFb"/>
                             <constraint firstAttribute="trailing" secondItem="wtL-dz-U2w" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="eQT-Xe-Bk0"/>
                             <constraint firstItem="sYa-Hd-fn3" firstAttribute="baseline" secondItem="0TB-L7-u0d" secondAttribute="baseline" type="default" id="egc-Rl-qmd"/>
                             <constraint firstItem="r1e-36-Oyt" firstAttribute="top" secondItem="16" secondAttribute="top" constant="20" symbolic="YES" type="default" id="fxa-ad-l3z"/>
@@ -135,7 +129,6 @@
                     <connections>
                         <outlet property="latLabel" destination="0TB-L7-u0d" id="TRl-fs-GQe"/>
                         <outlet property="longLabel" destination="sYa-Hd-fn3" id="lBP-A0-5Sl"/>
-                        <outlet property="mapView" destination="lJW-ba-0OA" id="oNt-Sx-265"/>
                         <outlet property="speedLabel" destination="r1e-36-Oyt" id="HKw-4i-P1M"/>
                         <outlet property="testLabel" destination="bgj-BM-hvL" id="xGm-ka-FlC"/>
                         <outlet property="zoomInButton" destination="wtL-dz-U2w" id="h1r-K1-0Cb"/>
@@ -208,26 +201,6 @@
         <image name="first" width="16" height="16"/>
         <image name="second" width="16" height="16"/>
     </resources>
-    <classes>
-        <class className="MapViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/MapViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="toggleLocationOnMap:"/>
-                <relationship kind="action" name="zoomChange:"/>
-                <relationship kind="action" name="zoomToMe:"/>
-                <relationship kind="outlet" name="latLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="longLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="mapView" candidateClass="MKMapView"/>
-                <relationship kind="outlet" name="speedLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="testLabel" candidateClass="UILabel"/>
-                <relationship kind="outlet" name="zoomInButton" candidateClass="UIButton"/>
-                <relationship kind="outlet" name="zoomOutButton" candidateClass="UIButton"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
